// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renderer/components/filters/FilterSection.tsx should be able to toggle filter value - none already set 1`] = `
<div
  class="css-bsfd3j"
>
  <label
    class="css-k8x29e"
  >
    <input
      aria-label="mention"
      class="css-f3myyk"
      tabindex="0"
      type="checkbox"
      value=""
    />
    <svg
      class="css-1dr55qw"
      role="presentation"
      style="fill: var(--checkbox-tick-color);"
      viewBox="0 0 24 24"
    >
      <g
        fill-rule="evenodd"
      >
        <rect
          fill="currentColor"
          height="12"
          rx="2"
          width="12"
          x="6"
          y="6"
        />
      </g>
    </svg>
    <span
      class="css-1odt9zb"
    >
      Mention
    </span>
  </label>
  <span
    class="css-144dypm"
  >
    <span
      aria-hidden="true"
      class="css-1dbakxj"
      style="color: currentColor;"
    >
      <svg
        class="css-u7v0tx"
        fill="none"
        role="presentation"
        viewBox="-4 -4 24 24"
      >
        <path
          d="M11.625 14.28A7.25 7.25 0 1 1 15.25 8c0 1.381-.932 3.107-2.59 3.107-1.656 0-1.782-1.976-1.782-3.357l.005-.125m0 0c.022-1.019-.42-1.956-1.258-2.44-1.315-.759-3.11-.114-4.007 1.44s-.558 3.43.757 4.19c1.315.759 3.11.115 4.007-1.44a3.7 3.7 0 0 0 .5-1.75Z"
          stroke="currentcolor"
          stroke-width="1.5"
        />
      </svg>
    </span>
  </span>
  <span
    class="css-1wkl091"
  >
    <span
      class="css-f9etm4"
    >
      0
    </span>
  </span>
</div>
`;

exports[`renderer/components/filters/FilterSection.tsx should be able to toggle filter value - some filters already set 1`] = `
<div
  class="css-bsfd3j"
>
  <label
    class="css-k8x29e"
  >
    <input
      aria-label="comment"
      class="css-f3myyk"
      tabindex="0"
      type="checkbox"
      value=""
    />
    <svg
      class="css-1dr55qw"
      role="presentation"
      style="fill: var(--checkbox-tick-color);"
      viewBox="0 0 24 24"
    >
      <g
        fill-rule="evenodd"
      >
        <rect
          fill="currentColor"
          height="12"
          rx="2"
          width="12"
          x="6"
          y="6"
        />
      </g>
    </svg>
    <span
      class="css-1odt9zb"
    >
      Comment
    </span>
  </label>
  <span
    class="css-144dypm"
  >
    <span
      aria-hidden="true"
      class="css-1dbakxj"
      style="color: currentColor;"
    >
      <svg
        class="css-u7v0tx"
        fill="none"
        role="presentation"
        viewBox="-4 -4 24 24"
      >
        <path
          d="M4.25 13.25v-.75h-.2l-.172.099zm-3.5 2H0a.75.75 0 0 0 1.122.651zM2.625 2h10.75V.5H2.625zM14.5 3.125v8.25H16v-8.25zM13.375 12.5H4.25V14h9.125zm-9.497.099-3.5 2 .744 1.302 3.5-2zM1.5 15.25V3.125H0V15.25zM4 6.5h8V5H4zm0 3h5V8H4zm10.5 1.875c0 .621-.504 1.125-1.125 1.125V14A2.625 2.625 0 0 0 16 11.375zM13.375 2c.621 0 1.125.504 1.125 1.125H16A2.625 2.625 0 0 0 13.375.5zM2.625.5A2.625 2.625 0 0 0 0 3.125h1.5C1.5 2.504 2.004 2 2.625 2z"
          fill="currentcolor"
        />
      </svg>
    </span>
  </span>
  <span
    class="css-1wkl091"
  >
    <span
      class="css-f9etm4"
    >
      0
    </span>
  </span>
</div>
`;

exports[`renderer/components/filters/FilterSection.tsx should render itself & its children 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="css-11u50rl"
      >
        <h4
          class="css-1skdotg"
        >
          FilterSectionTitle
        </h4>
        <div
          class="css-k5cxwk"
        >
          <div
            class="css-bsfd3j"
          >
            <label
              class="css-k8x29e"
            >
              <input
                aria-label="mention"
                class="css-f3myyk"
                tabindex="0"
                type="checkbox"
                value=""
              />
              <svg
                class="css-1dr55qw"
                role="presentation"
                style="fill: var(--checkbox-tick-color);"
                viewBox="0 0 24 24"
              >
                <g
                  fill-rule="evenodd"
                >
                  <rect
                    fill="currentColor"
                    height="12"
                    rx="2"
                    width="12"
                    x="6"
                    y="6"
                  />
                </g>
              </svg>
              <span
                class="css-1odt9zb"
              >
                Mention
              </span>
            </label>
            <span
              class="css-144dypm"
            >
              <span
                aria-hidden="true"
                class="css-1dbakxj"
                style="color: currentColor;"
              >
                <svg
                  class="css-u7v0tx"
                  fill="none"
                  role="presentation"
                  viewBox="-4 -4 24 24"
                >
                  <path
                    d="M11.625 14.28A7.25 7.25 0 1 1 15.25 8c0 1.381-.932 3.107-2.59 3.107-1.656 0-1.782-1.976-1.782-3.357l.005-.125m0 0c.022-1.019-.42-1.956-1.258-2.44-1.315-.759-3.11-.114-4.007 1.44s-.558 3.43.757 4.19c1.315.759 3.11.115 4.007-1.44a3.7 3.7 0 0 0 .5-1.75Z"
                    stroke="currentcolor"
                    stroke-width="1.5"
                  />
                </svg>
              </span>
            </span>
            <span
              class="css-1wkl091"
            >
              <span
                class="css-f9etm4"
              >
                0
              </span>
            </span>
          </div>
          <div
            class="css-bsfd3j"
          >
            <label
              class="css-k8x29e"
            >
              <input
                aria-label="comment"
                class="css-f3myyk"
                tabindex="0"
                type="checkbox"
                value=""
              />
              <svg
                class="css-1dr55qw"
                role="presentation"
                style="fill: var(--checkbox-tick-color);"
                viewBox="0 0 24 24"
              >
                <g
                  fill-rule="evenodd"
                >
                  <rect
                    fill="currentColor"
                    height="12"
                    rx="2"
                    width="12"
                    x="6"
                    y="6"
                  />
                </g>
              </svg>
              <span
                class="css-1odt9zb"
              >
                Comment
              </span>
            </label>
            <span
              class="css-144dypm"
            >
              <span
                aria-hidden="true"
                class="css-1dbakxj"
                style="color: currentColor;"
              >
                <svg
                  class="css-u7v0tx"
                  fill="none"
                  role="presentation"
                  viewBox="-4 -4 24 24"
                >
                  <path
                    d="M4.25 13.25v-.75h-.2l-.172.099zm-3.5 2H0a.75.75 0 0 0 1.122.651zM2.625 2h10.75V.5H2.625zM14.5 3.125v8.25H16v-8.25zM13.375 12.5H4.25V14h9.125zm-9.497.099-3.5 2 .744 1.302 3.5-2zM1.5 15.25V3.125H0V15.25zM4 6.5h8V5H4zm0 3h5V8H4zm10.5 1.875c0 .621-.504 1.125-1.125 1.125V14A2.625 2.625 0 0 0 16 11.375zM13.375 2c.621 0 1.125.504 1.125 1.125H16A2.625 2.625 0 0 0 13.375.5zM2.625.5A2.625 2.625 0 0 0 0 3.125h1.5C1.5 2.504 2.004 2 2.625 2z"
                    fill="currentcolor"
                  />
                </svg>
              </span>
            </span>
            <span
              class="css-1wkl091"
            >
              <span
                class="css-f9etm4"
              >
                0
              </span>
            </span>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="css-11u50rl"
    >
      <h4
        class="css-1skdotg"
      >
        FilterSectionTitle
      </h4>
      <div
        class="css-k5cxwk"
      >
        <div
          class="css-bsfd3j"
        >
          <label
            class="css-k8x29e"
          >
            <input
              aria-label="mention"
              class="css-f3myyk"
              tabindex="0"
              type="checkbox"
              value=""
            />
            <svg
              class="css-1dr55qw"
              role="presentation"
              style="fill: var(--checkbox-tick-color);"
              viewBox="0 0 24 24"
            >
              <g
                fill-rule="evenodd"
              >
                <rect
                  fill="currentColor"
                  height="12"
                  rx="2"
                  width="12"
                  x="6"
                  y="6"
                />
              </g>
            </svg>
            <span
              class="css-1odt9zb"
            >
              Mention
            </span>
          </label>
          <span
            class="css-144dypm"
          >
            <span
              aria-hidden="true"
              class="css-1dbakxj"
              style="color: currentColor;"
            >
              <svg
                class="css-u7v0tx"
                fill="none"
                role="presentation"
                viewBox="-4 -4 24 24"
              >
                <path
                  d="M11.625 14.28A7.25 7.25 0 1 1 15.25 8c0 1.381-.932 3.107-2.59 3.107-1.656 0-1.782-1.976-1.782-3.357l.005-.125m0 0c.022-1.019-.42-1.956-1.258-2.44-1.315-.759-3.11-.114-4.007 1.44s-.558 3.43.757 4.19c1.315.759 3.11.115 4.007-1.44a3.7 3.7 0 0 0 .5-1.75Z"
                  stroke="currentcolor"
                  stroke-width="1.5"
                />
              </svg>
            </span>
          </span>
          <span
            class="css-1wkl091"
          >
            <span
              class="css-f9etm4"
            >
              0
            </span>
          </span>
        </div>
        <div
          class="css-bsfd3j"
        >
          <label
            class="css-k8x29e"
          >
            <input
              aria-label="comment"
              class="css-f3myyk"
              tabindex="0"
              type="checkbox"
              value=""
            />
            <svg
              class="css-1dr55qw"
              role="presentation"
              style="fill: var(--checkbox-tick-color);"
              viewBox="0 0 24 24"
            >
              <g
                fill-rule="evenodd"
              >
                <rect
                  fill="currentColor"
                  height="12"
                  rx="2"
                  width="12"
                  x="6"
                  y="6"
                />
              </g>
            </svg>
            <span
              class="css-1odt9zb"
            >
              Comment
            </span>
          </label>
          <span
            class="css-144dypm"
          >
            <span
              aria-hidden="true"
              class="css-1dbakxj"
              style="color: currentColor;"
            >
              <svg
                class="css-u7v0tx"
                fill="none"
                role="presentation"
                viewBox="-4 -4 24 24"
              >
                <path
                  d="M4.25 13.25v-.75h-.2l-.172.099zm-3.5 2H0a.75.75 0 0 0 1.122.651zM2.625 2h10.75V.5H2.625zM14.5 3.125v8.25H16v-8.25zM13.375 12.5H4.25V14h9.125zm-9.497.099-3.5 2 .744 1.302 3.5-2zM1.5 15.25V3.125H0V15.25zM4 6.5h8V5H4zm0 3h5V8H4zm10.5 1.875c0 .621-.504 1.125-1.125 1.125V14A2.625 2.625 0 0 0 16 11.375zM13.375 2c.621 0 1.125.504 1.125 1.125H16A2.625 2.625 0 0 0 13.375.5zM2.625.5A2.625 2.625 0 0 0 0 3.125h1.5C1.5 2.504 2.004 2 2.625 2z"
                  fill="currentcolor"
                />
              </svg>
            </span>
          </span>
          <span
            class="css-1wkl091"
          >
            <span
              class="css-f9etm4"
            >
              0
            </span>
          </span>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
